Agregue Formspree al formulario para poder recibir mails

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
     </style>
-    <title>Home</title>
+    <title>Menú</title>
 </head>
 <body>
     <header>
         <nav>
             <img class="logo" src="img/logo.png" alt="logo">
             <ul>
-                <li><a href="index.html">Menu</a></li>
+                <li><a href="index.html">Menú</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
