--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
     </style>
-    <title>Contacto</title>
+    <title>Login</title>
 </head>
 <body>
     <header>
@@ -23,11 +23,11 @@
     </header>
     <main>
         <div class="menu">
-            <h2>Contacto</h2>
-            <form action="https://formspree.io/f/mjkvgdzq" method="post">
+            <h2>Login</h2>
+            <form action="">
                 <input type="text" placeholder="Nombre"><br>
                 <input type="text" placeholder="Apellido"><br>
-                <input type="email" placeholder="Correo Electronico" name="email"><br>
+                <input type="email" placeholder="Correo Electronico"><br>
                 <textarea name="mensaje" placeholder="Escribir mensaje aquí"></textarea><br>
                 <input type="submit" value="Enviar">
                 <input type="reset" value="Borrar">
