--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
     </style>
-    <title>Nosotros</title>
+    <title>Registrarse</title>
 </head>
 <body>
     <header>
@@ -23,25 +23,39 @@
     </header>
     <main>
         <div class="menu">
-            <h2>Nosotros</h2>
-            <h3>Historia</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita sequi exercitationem inventore minima repellendus facilis ut consectetur minus laudantium sapiente nisi magnam aspernatur nihil, odit illo beatae quod ea tempora!.</p>
-            <h3>Propuesta</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste tempore quos ratione natus vero recusandae, reiciendis veritatis quod laboriosam totam amet soluta quas facere incidunt corporis repellendus quisquam quae molestias.</p>
-            <div class="maps-container">
-                <div class="maps-box">
-                    <p class="maps-location">Palermo</p>
-                    <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.8132054223975!2d-58.400662023517384!3d-34.59917175725943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca944582dea1%3A0x1187bb1c0c4c27b0!2sPlaza%20Dr.%20Bernardo%20Houssay!5e1!3m2!1ses-419!2sar!4v1727734509615!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h2>Registrarse</h2>
+            <form class="register-form" id="register-form" method="post" action="script.js">
+                <div class="register-form-control">
+                    <label>Usuario</label>
+                    <input type="text" placeholder="JuanPerez" id="username">
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                    <small>Usuario incorrecto</small>
                 </div>
-                <div class="maps-box">
-                    <p class="maps-location">Caballito</p>
-                    <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.8132054223975!2d-58.400662023517384!3d-34.59917175725943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca944582dea1%3A0x1187bb1c0c4c27b0!2sPlaza%20Dr.%20Bernardo%20Houssay!5e1!3m2!1ses-419!2sar!4v1727734509615!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="register-form-control">
+                    <label>Email</label>
+                    <input type="email" placeholder="ejemplo@gmail.com" id="email">
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                    <small>Email incorrecto</small>
                 </div>
-                <div class="maps-box">
-                    <p class="maps-location">Martinez</p>
-                    <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.8132054223975!2d-58.400662023517384!3d-34.59917175725943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca944582dea1%3A0x1187bb1c0c4c27b0!2sPlaza%20Dr.%20Bernardo%20Houssay!5e1!3m2!1ses-419!2sar!4v1727734509615!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="register-form-control">
+                    <label>Contraseña</label>
+                    <input type="password" placeholder="Ingresar nueva contraseña" id="password">
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                    <small>Contraseña incorrecta</small>
                 </div>
-            </div>
+                <div class="register-form-control">
+                    <label>Confirmar contraseña</label>
+                    <input type="password" placeholder="Reingresar contraseña" id="password2">
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                    <small>Las contraseñas no coinciden</small>
+                </div>
+                
+                <button type="submit">Enviar</button>
+            </form>
         </div>
     </main>
     <footer>
@@ -86,5 +100,6 @@
         </ul>
         <p class="footer-rights">@2024 | Todos los derechos reservados</p>
     </footer>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
