Se agrego pagina de reseñas, hecha con grid y logos y se modifico la paleta de colores

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
     <header>
         <nav>
-            <img class="logo" src="img/logo.png" alt="logo">
             <ul>
                 <li><a href="index.html">Menú</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="reviews.html">Reseñas</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class="menu">
+        <div class="main-container">
             <h2>Menú</h2>
             <h3>Entradas</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
@@ -144,7 +144,7 @@
                 </a>
             </li>
             <li class="footer-icon-element">
-                <a href="" class="icon">
+                <a href="https://github.com/joshualukosiunas" class="icon" target="_blank">
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </a>
             </li>
@@ -160,10 +160,7 @@
                 <a href="contacto.html" class="footer-icon">Contacto</a>
             </li>
             <li class="footer-element">
-                <a href="login.html" class="footer-icon">Ingresar</a>
-            </li>
-            <li class="footer-element">
-                <a href="login.html" class="footer-icon">Desloguear</a>
+                <a href="reviews.html" class="footer-icon">Reseñas<li>
             </li>
         </ul>
         <p class="footer-rights">@2024 | Todos los derechos reservados</p>
