--- a/reviews.html
+++ b/reviews.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
     </style>
-    <title>Contacto</title>
+    <title>Reseñas</title>
 </head>
 <body>
     <header>
@@ -22,15 +22,34 @@
         </nav>
     </header>
     <main>
-        <div class="contact-container">
-            <form action="https://formspree.io/f/mjkvgdzq" method="post">
-                <h2>Contacto</h2>
-                    <input class="input-item" type="text" placeholder="Nombre"><br>
-                    <input class="input-item" type="text" placeholder="Apellido"><br>
-                    <input class="input-item" type="email" placeholder="Correo Electronico" name="email"><br>
-                    <textarea class="input-item" name="mensaje" placeholder="Escribir mensaje aquí"></textarea><br>
-                    <input class="input-submit" type="submit" value="Enviar">
-            </form>
+        <div class="reviews-container">
+            <h2>Reseñas</h2>
+            <div class="reviews-grid-container">
+                <div class="card">
+                    <img src="img/clarin-logo.png" alt="Diario Clarín">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, minus.</p>
+                </div>
+                <div class="card">
+                    <img src="img/el-pais-logo.png" alt="Diario El País">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, minus.</p>
+                </div>
+                <div class="card">
+                    <img src="img/la-nacion-logo.png" alt="Diario La Nación">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, minus.</p>
+                </div>
+                <div class="card">
+                    <img src="img/infobae-logo.png" alt="El Gourmet">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, minus.</p>
+                </div>
+                <div class="card">
+                    <img src="img/el-gourmet-logo.png" alt="Diario Crónica">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, minus.</p>
+                </div>
+                <div class="card">
+                    <img src="img/cronica-logo.png" alt="Medio digital Infobae">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, minus.</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
@@ -72,7 +91,7 @@
                 <a href="contacto.html" class="footer-icon">Contacto</a>
             </li>
             <li class="footer-element">
-                <a href="reviews.html" class="footer-icon">Reseñas<li>
+                <a href="reviews.html" class="footer-icon">Reseñas</a>
             </li>
         </ul>
         <p class="footer-rights">@2024 | Todos los derechos reservados</p>
