--- a/login.html
+++ b/login.html
@@ -17,12 +17,13 @@
             <ul>
                 <li><a href="index.html">Menú</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="reviews.html">Reseñas</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class="menu">
+        <div class="main-container">
             <h2>Login</h2>
             <form action="">
                 <input type="text" placeholder="Nombre"><br>
@@ -68,10 +69,7 @@
                 <a href="contacto.html" class="footer-icon">Contacto</a>
             </li>
             <li class="footer-element">
-                <a href="login.html" class="footer-icon">Ingresar</a>
-            </li>
-            <li class="footer-element">
-                <a href="login.html" class="footer-icon">Desloguear</a>
+                <a href="reviews.html" class="footer-icon">Reseñas<li>
             </li>
         </ul>
         <p class="footer-rights">@2024 | Todos los derechos reservados</p>
