Se arreglo un list item extra en el footer y se modifico la animacion del navbar

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <a href="contacto.html" class="footer-icon">Contacto</a>
             </li>
             <li class="footer-element">
-                <a href="reviews.html" class="footer-icon">Reseñas<li>
+                <a href="reviews.html" class="footer-icon">Reseñas</a>
             </li>
         </ul>
         <p class="footer-rights">@2024 | Todos los derechos reservados</p>
